objects/X80_50__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <formula>Text( Period__c)  &amp;&quot; - &quot;&amp;   Text( Team_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01-Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02-Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07-Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09-Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <formula>DATE( VALUE(TEXT(Year__c)), VALUE(left(TEXT(Month__c),2)) , 01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( 
	AND((X50__c=0), (X80__c=0) )
		, &quot;No Forecast&quot;, 
		(
			IF
			(
				AND(((  X50__c&lt;&gt;0)), ((X80__c&lt;&gt;0)))
			, &quot;Completed&quot;, &quot;Partial Forecast&quot;
			)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_2__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>ACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClinOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Text( Team_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wildcard__c</fullName>
        <label>Wildcard</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X50__c</fullName>
        <label>50</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X80__c</fullName>
        <label>80</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>80-50</label>
    <listViews>
        <fullName>All</fullName>
        <columns>X50__c</columns>
        <columns>X80__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>CCC</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>X50__c</columns>
        <columns>X80__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>International_Marketers_Products</fullName>
        <columns>NAME</columns>
        <columns>X80__c</columns>
        <columns>X50__c</columns>
        <columns>Date__c</columns>
        <columns>Team__c</columns>
        <columns>Month__c</columns>
        <columns>Period__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_2__c</field>
            <operation>equals</operation>
            <value>International</value>
        </filters>
        <filters>
            <field>Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>International Marketers/Products</label>
        <sharedTo>
            <role>FinOpsAnalyst</role>
            <roleAndSubordinatesInternal>Executive</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>X80__c</columns>
        <columns>X50__c</columns>
        <columns>Date__c</columns>
        <columns>Team__c</columns>
        <columns>Month__c</columns>
        <columns>Period__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>This Month</label>
        <sharedTo>
            <role>FinOpsAnalyst</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>80-50</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Year_must_be_four_digit_format</fullName>
        <active>true</active>
        <errorConditionFormula>Year__c &lt; 1899</errorConditionFormula>
        <errorMessage>Please input a valid year.</errorMessage>
    </validationRules>
</CustomObject>